@@ -1,7 +1,7 @@
 dnl vim: ft=config sw=4 noet nocin com+=b\:dnl fo+=or tw=78
 dnl ==========================================================================
 dnl 
-dnl @(#) $RCSfile: testsuite.at,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/01/23 10:00:53 $
+dnl @(#) $RCSfile: testsuite.at,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/03/09 05:59:55 $
 dnl
 dnl --------------------------------------------------------------------------
 dnl
@@ -61,11 +61,14 @@ dnl Corporation at a fee.  See http://www.openss7.com/
 dnl
 dnl --------------------------------------------------------------------------
 dnl
-dnl Last Modified $Date: 2007/01/23 10:00:53 $ by $Author: brian $
+dnl Last Modified $Date: 2007/03/09 05:59:55 $ by $Author: brian $
 dnl
 dnl --------------------------------------------------------------------------
 dnl
 dnl $Log: testsuite.at,v $
+dnl Revision 0.9.2.4  2007/03/09 05:59:55  brian
+dnl - changes for release
+dnl
 dnl Revision 0.9.2.3  2007/01/23 10:00:53  brian
 dnl - added test program and m2ua-as updates
 dnl
@@ -83,7 +86,7 @@ dnl AT_ARG_OPTION_ARG([dummy_optarg], AS_HELP_STRING([--dummy_optarg], [specify 
 m4_include([kernel.at])
 
 m4_include([testsuite-m2pa.at])
-m4_include([testsuite-m2ua_as.at])
+#m4_include([testsuite-m2ua_as.at])
 
 #m4_include([dummy1.m4])
 #m4_include([dummy2.m4])
